// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetLabel renders a dark label with white text 1`] = `
<span
  className="badge mr-2 badge-secondary text-white"
  data-tooltip="Something is wrong"
  style={
    Object {
      "backgroundColor": "#330912",
    }
  }
>
  bug
</span>
`;

exports[`ChangesetLabel renders a light label with dark text 1`] = `
<span
  className="badge mr-2 badge-secondary"
  data-tooltip="Something is wrong"
  style={
    Object {
      "backgroundColor": "#acfc99",
    }
  }
>
  bug
</span>
`;
